--- a/read.css
+++ b/read.css
@@ -24,4 +24,7 @@
         border-radius: 5px;
         padding: 10px;
 }
+.blog-content.dark-mode{
+    background-color: rgb(0, 83, 56);
+}
     
