--- a/read_draft.css
+++ b/read_draft.css
@@ -20,6 +20,9 @@
     color: purple;
     
 }
+.fltr-name.dark-mode{
+    color: rgb(254, 224, 153);
+}
 #fltr-txt{
     margin-left: 1rem;
     margin-right: 10px;
@@ -31,10 +34,16 @@
     padding: 5px;
     box-shadow: 0px 0px 1px 1px orange;
 }
+#fltr-txt.dark-mode{
+    color: rgb(254, 224, 153);
+    box-shadow: 0px 0px 1px 1px rgb(216, 216, 216);
+}
 #fltr-txt:hover{
     cursor: pointer;
-    /* color: green; */
     box-shadow: 0px 0px 1px 1px green;
+}
+#fltr-txt:hover.dark-mode{
+    box-shadow: 0px 0px 1px 1px rgb(199, 255, 199);
 }
 #cards{
     display: grid;
@@ -54,9 +63,12 @@
     background: linear-gradient(270deg,rgb(207, 206, 206,0.3),rgb(254, 240, 214));;
     border-radius: 5px;
 }
+.card.dark-mode{
+    background: linear-gradient(270deg, rgb(0, 123, 110),rgb(62, 62, 62));
+}
 .card:hover{
     transform: scale(1.07);
-    box-shadow: 0px 0px 2px 1px rgb(75, 75, 75);
+    box-shadow: 0px 0px 2px 1px rgb(220, 255, 223);
     border-radius: 0px;
     cursor:pointer;
 }
@@ -91,6 +103,9 @@
     border-radius: 3px;
     text-decoration: none;
     box-shadow: 0px 0px 1px 1px purple
+}
+.links.dark-mode{
+    box-shadow: 0px 0px 1px 1px yellow;
 }
 .links:hover{
     border: none;
